<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2014 ohmage

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <LinearLayout
        style="@style/LoginFormContainer"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/ohmage_dark_blue"
            android:text="@string/create_ohmage_account_title"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_fullname"
            style="@style/Signup.H3" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            style="@style/Signup.Input"
            android:hint="@string/prompt_fullname_hint" />

        <LinearLayout
            android:id="@+id/ohmage_account_prompts"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                style="@style/Signup.H3"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email_hint"
                android:inputType="textEmailAddress"
                style="@style/Signup.Input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_password"
                style="@style/Signup.H3"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/Signup.Input"
                android:hint="@string/create_password_hint"
                android:imeActionLabel="@string/action_create_short"
                android:imeActionId="@+id/create_account"
                android:imeOptions="actionUnspecified" />
        </LinearLayout>

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_create"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:layout_gravity="right" />

    </LinearLayout>

</ScrollView>
