...
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@drawable/splash_gradient_bottom">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_google_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/sign_up_email_button"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/sign_in_email_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/email_signin_btn"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:textColor="@color/common_signin_btn_text_light"
...
