...
    <string name="prompt_password_hint">Enter your password</string>
    <string name="create_password_hint">Enter a password</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_fullname_hint">Your real name</string>
    <string name="action_create">Create Account</string>
    <string name="action_create_short">Create</string>
    <string name="error_field_required">This field is required</string>
    <string name="account_creation_progress">Creating Account…</string>
    <string name="sign_in_with_email">Sign in with E\u2011mail</string>
    <string name="sign_up_with_ohmage">Create Account</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="unknown_error">Unknown error. Please try again later. Send feedback to us if this continues to happen.</string>
    <string name="create_ohmage_account_title">Create an ohmage account</string>
    <string name="sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_credentials">Invalid E\u2011mail or password, please try again.</string>
    <string name="error_invalid_email_address">Invalid E\u2011mail Address</string>
    <string name="title_account_not_activated">Account Not Activated</string>
    <string name="message_account_not_activated">Your account has not been activated. You won\'t be able to sync your data with the server until you activate your account by clicking the link in the registration E\u2011mail sent by ohmage.</string>
    <string name="account_not_activated">Activate your account by clicking the link in the E-mail from ohmage</string>
    <string name="action_search">Search</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_ohmlet">Ohmlet</string>
...
